--- a/src/resources/elements/editable.html
+++ b/src/resources/elements/editable.html
@@ -12,7 +12,7 @@
             <span if.bind="story.author">${story.author}:&nbsp;</span>
             <span if.bind="! story.author">${'stories.unknown-source' & t}:&nbsp;</span>
         </div>
-        <div class="row checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
+        <div class="checkable ${story.checked ? 'selected' : ''}"><strong style="float:right" innerhtml.bind="story.name" ></strong></div>
 
         <div class="fr-view ${settings.class}">
             <p class="${theme.font_size}" innerhtml.bind="story.story_preview" css="float:right;direction:rtl;text-align:justify;" >
