fix(app): Remove debug code to force show loader

--- a/src/app.html
+++ b/src/app.html
@@ -22,7 +22,7 @@
             </div>
 
             <div class="navbar-main" css="direction:${theme.rtltr};">
-                <span class="loader" if.bind="api.pending || true">
+                <span class="loader" if.bind="api.pending">
                     <i class="fa fa-spinner fa-spin fa-2x"></i>
                 </span>
                 <div class="nav-items">
