--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -63,7 +63,7 @@
                             ${'result' + uf & t}
                         </button>
                     </form>
-                    <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;">
+                    <ul style="width:100%;padding:0;float:right;height:560px;overflow:auto;list-style-type: none;padding-left:20px;" ref="scroll_area">
                         <li repeat.for="story of story_list | filter: filter : 'name' : 'author' | take : 9999 | sort : 'name'" dir="${theme.rtltr}" 
                             if.bind="story.used_for==used_for"
                             style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;margin-bottom:16px;">
