--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -20,7 +20,7 @@
                             </div>
                         </div>
                     </div>
-                    <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;">
+                    <ul style="width:100%;padding:0;float:right;height:597px;overflow:auto;list-style-type: none;padding-left:20px;" ref="scroll_area">
                         <li repeat.for="term of term_list | filter: filter : 'name' : 'author'" 
                             dir="rtl" style="float:right;border-bottom:2px solid lightgray;padding-bottom:20px;position:relative;width:100%;cursor:pointer;" 
                                 click.delegate="jump_to_the_full_story($event, term)">
