--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -14,9 +14,9 @@
                             <!--<div class="input-group">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>-->
-                            <div class="form-group" if.bind="caller_type=='story'">
+                            <div class="form-group">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
-                                    ${'photos.search-member' & t}
+                                    ${with_a_member_text}
                                 </button>
                             </div>
                             <div class="form-group" if.bind="phase=='can-modify-tags'">
