--- a/src/terms/terms.html
+++ b/src/terms/terms.html
@@ -26,7 +26,9 @@
                                 click.delegate="jump_to_the_full_story($event, term)">
                             <div style="height:120px;overflow:hidden;padding:20px;position:relative;" class="story-preview">
                                 <div style="margin-bottom: 10px;padding-right:0px;">
-                                    <editable settings.bind="{show_date:false, class:'story-section', no_expand: true}" story.bind="term"></editable>
+                                    <editable settings.bind="{show_date:false, class:'story-section', no_expand: true, deletable: true}" 
+                                        story.bind="term" 
+                                        change.delegate="handle_event(term, $event)"></editable>
                                 </div>
                                 <!--<a style="position:absolute;top:20px;left:10px;cursor:pointer;" click.delegate="jump_to_the_full_story($event, term)">${'stories.to-the-full-story' & t}...</a>-->
                             </div>
