--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -100,6 +100,9 @@
                             place_holder_text="photos.click-photographer"
                             ungrouped_selected_options.bind="params.selected_photographers"
                             settings.bind="photographers_settings"
+                            new-name.delegate="add_photographer($event)"
+                            remove-option.delegate="remove_photographer($event)"
+                            name-changed.delegate="photographer_name_changed($event)"
                             ms-change.delegate="handle_photographer_change($event)">
                         </multi-select>
                     </div>
