--- a/src/app.html
+++ b/src/app.html
@@ -1,17 +1,17 @@
 <template>
     <require from="styles.css"></require>
     <require from="toastr/build/toastr.min.css"></require>
-    
+
     <div class="page-container ${theme.palette}" css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" if.bind="! theme.hide_menu">
-                    
+
             <div class="navbar-controls">
                 <user-mode></user-mode>
             </div>
 
             <div class="navbar-search">
                 <div class="search-box" css="width:${search_input_width}px;">
-                    <label class="search-box-container"> 
+                    <label class="search-box-container">
                         <input type="text" class="search-box-input" value.bind="keywords" t="[placeholder]enter-search-words" dir.bind="theme.rtltr" change.delegate="go_search()" />
                         <i class="far fa-times" click.trigger="clear_keywords()"></i>
                     </label>
@@ -35,15 +35,15 @@
                     </a>
                 </div>
             </div>
+        </nav>
 
-            <div class="row top-head" style="height:80px;" if.bind="theme.page_title != '' && ! theme.hide_title">
-                <div class="page-title" css="background-image:url('${theme.files.top_background}');">
-                    <div style="margin-top:20px;padding-top:2px;margin-right:8px;">
-                        <h1 dir="rtl"> ${theme.page_title & t}</h1>
-                    </div>
+        <div class="top-head" if.bind="theme.page_title != '' && ! theme.hide_title">
+            <div class="page-title" css="background-image:url('${theme.files.top_background}');">
+                <div style="margin-top:20px;padding-top:2px;margin-right:8px;">
+                    <h1 dir="rtl"> ${theme.page_title & t}</h1>
                 </div>
             </div>
-        </nav>
+        </div>
         <div id="router-view" css="min-height:${router_view_height};">
             <router-view></router-view>
         </div>
