--- a/src/app.html
+++ b/src/app.html
@@ -38,10 +38,8 @@
         </nav>
 
         <div class="top-head" if.bind="theme.page_title != '' && ! theme.hide_title">
-            <div class="page-title" css="background-image:url('${theme.files.top_background}');">
-                <div style="margin-top:20px;padding-top:2px;margin-right:8px;">
-                    <h1 dir="rtl"> ${theme.page_title & t}</h1>
-                </div>
+            <div class="page-title" css="background-image:url('${theme.files.top_background}');" dir="rtl">
+                <span>${theme.page_title & t}</span>
             </div>
         </div>
         <div id="router-view" css="min-height:${router_view_height};">
