--- a/src/members/members.html
+++ b/src/members/members.html
@@ -2,7 +2,7 @@
     <require from="./members.css"></require>
 
     <section class="container content-area">
-        <div style="margin-top:80px;">
+        <div>
             <div class="row">
                 <div class="col-md-10 col-md-offset-2" style="padding-right:50px;">
                     <form class="form-inline" style="padding-top:16px;direction:rtl;">
