--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -3,7 +3,7 @@
     <section class="container content-area photos" css="height: ${win_height-266}px;">
         <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:100px;padding-right:24px;" dir="rtl">
             <div class="row">
-                <div class="col-md-1" css="padding-top: 40px;position:relative">
+                <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
                     <span css="position:absolute"></help>${'photos.more' & t}<help topic="photos.slider" position="right"></span>
                     <input type="range" id="range" min="4" max="32" step="1" change.trigger="slider_changed()" value.bind="photos_per_line" />
                     <span css="position:absolute">${'photos.less' & t}</span>
@@ -14,7 +14,7 @@
                             <!--<div class="input-group">
                                 <search-input value.bind="filter" placeholder="photos.filter" height="32"></search-input>
                             </div>-->
-                            <div class="form-group">
+                            <div class="form-group hide-if-small">
                                 <button class="btn btn-basic btn-md" click.delegate="select_member($event)">
                                     ${with_a_member_text}
                                 </button>
