--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./members.css"></require>
-    <div id="member-detail" class="container" style="height:774px;padding-right:46px;padding-left:28px;" ref="member_detail_container">
+    <div id="member-detail" class="container" style="height:774px;" ref="member_detail_container">
         <div class="row" ref="member_header">
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" styledeletesoon="background-color:#aaaaaa" dir="${theme.rtltr}">
                 <i class="far fa-share pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
@@ -11,7 +11,7 @@
         </div>
         <div class="row">
             <photo-strip class="col-xs-12" source.bind="source" height.bind="photo_strip_height" id.bind="member.member_info.id"
-                style="padding:0;" 
+                style="padding:0;"
                 action_key="Zoom" dir="ltr"
                 height_change.trigger="on_height_change($event)"
                 settings.bind="{arrows:true, height:220}">
@@ -51,7 +51,7 @@
                                 <td>
                                     <ul class="family">
                                         <li>
-                                            <a type="button" class="btn btn-default ${disabled_if}" 
+                                            <a type="button" class="btn btn-default ${disabled_if}"
                                                 repeat.for="sibling of member.family_connections.siblings" route-href="route: member-details; params.bind: {id:sibling.id}">
                                                 <img src.bind="get_profile_photo(sibling)" />
                                                 <span>
@@ -106,18 +106,18 @@
                         ${'members.life-summary' & t} ${member.member_info.first_name}
                     </h4>
                     <i class="fa fa-expand fa-lg"
-                        show.bind="!life_summary_expanded" 
-                        style="margin-left:32px;float:left;cursor:pointer;" 
-                        aubs-tooltip="text.bind:expand" 
+                        show.bind="!life_summary_expanded"
+                        style="margin-left:32px;float:left;cursor:pointer;"
+                        aubs-tooltip="text.bind:expand"
                         click.trigger="toggle_life_summary_size($event)">
                     </i>
                     <i class="fa fa-compress fa-lg"
-                        show.bind="life_summary_expanded" 
-                        style="margin-left:32px;float:left;cursor:pointer;" 
-                        aubs-tooltip="text.bind:compress" 
+                        show.bind="life_summary_expanded"
+                        style="margin-left:32px;float:left;cursor:pointer;"
+                        aubs-tooltip="text.bind:compress"
                         click.trigger="toggle_life_summary_size($event)">
                     </i>
-                    <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing" 
+                    <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing"
                         style="margin-left:2px;margin-top:-8px;float:left;cursor:pointer;"
                         class="word-highlighter ${highlight_on}" click.trigger="toggle_highlight_on()" t="[title]stories.highlight-on">
                     </button>
@@ -133,7 +133,7 @@
             </div>
             <!--member stories panel-->
             <div id="stories" class="fr-view row ${theme.font-size}" ref="bottom_panel"
-                show.bind="! (user.editing || life_summary_expanded)" 
+                show.bind="! (user.editing || life_summary_expanded)"
                 css="min-height:270px;margin-left:-31px;margin-right:0px;height:${bottom_height}px;"
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
                 <div class="col-md-3 col-sm-6 col-xs-12 story-box last notfirst" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_4)">
